-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 15
-
Component/s: hotspot
-
b18
-
x86_64
-
linux
The following test failed in the JDK15 CI:
applications/kitchensink/Kitchensink24HStress.java
Here's a snippet from the log file:
[2020-03-06T21:09:10.434132Z] Gathering output for process 8378
[stress.process.out] #
[stress.process.out] # A fatal error has been detected by the Java Runtime Environment:
[stress.process.out] #
[stress.process.out] # SIGSEGV (0xb) at pc=0x00007f32f0b16f41, pid=1674, tid=1732
[stress.process.out] #
[stress.process.out] # JRE version: Java(TM) SE Runtime Environment (15.0+13) (fastdebug build 15-ea+13-491)
[stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+13-491, mixed mode, tiered, z gc, linux-amd64)
[stress.process.out] # Problematic frame:
[stress.process.out] # V [libjvm.so+0x88cf41] CompiledMethod::cleanup_inline_caches_impl(bool, bool)+0x251
[stress.process.out] #
[stress.process.out] # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/90726e33-be99-4e27-9d68-25dad266ef13-S6007/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/d1379c40-2c0e-486d-b4f2-fe10394be9ad/runs/fbd3b82b-9dae-479b-8671-e5323c6febb9/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink24HStress_java/scratch/0/core.1674)
[stress.process.out] #
[stress.process.out] Unsupported internal testing APIs have been used.
[stress.process.out]
[stress.process.out] # An error report file with more information is saved as:
[stress.process.out] # /opt/mach5/mesos/work_dir/slaves/90726e33-be99-4e27-9d68-25dad266ef13-S6007/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/d1379c40-2c0e-486d-b4f2-fe10394be9ad/runs/fbd3b82b-9dae-479b-8671-e5323c6febb9/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink24HStress_java/scratch/0/hs_err_pid1674.log
[stress.process.out] #
[stress.process.out] # If you would like to submit a bug report, please visit:
[stress.process.out] # https://bugreport.java.com/bugreport/crash.jsp
[stress.process.out] #
[2020-03-06T21:10:16.640859Z] Gathering output for process 8884
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007f32e8399850): JavaThread "Sweeper thread" daemon [_thread_in_vm, id=1732, stack(0x00007f32d0166000,0x00007f32d0267000)]
Stack: [0x00007f32d0166000,0x00007f32d0267000], sp=0x00007f32d0265990, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x88cf41] CompiledMethod::cleanup_inline_caches_impl(bool, bool)+0x251
V [libjvm.so+0x88da6a] CompiledMethod::cleanup_inline_caches(bool)+0x5a
V [libjvm.so+0x14a3acb] NMethodSweeper::process_compiled_method(CompiledMethod*)+0x23b
V [libjvm.so+0x14a4ed8] NMethodSweeper::sweep_code_cache()+0x418
V [libjvm.so+0x14a5a3d] NMethodSweeper::possibly_sweep()+0x10d
V [libjvm.so+0x14a60ae] NMethodSweeper::sweeper_loop()+0x2fe
V [libjvm.so+0x152ed36] JavaThread::thread_main_inner()+0x226
V [libjvm.so+0x1533db6] Thread::call_run()+0xf6
V [libjvm.so+0x1265506] thread_native_entry(Thread*)+0x116
siginfo: si_signo: 11 (SIGSEGV), si_code: 128 (SI_KERNEL), si_addr: 0x0000000000000000
applications/kitchensink/Kitchensink24HStress.java
Here's a snippet from the log file:
[2020-03-06T21:09:10.434132Z] Gathering output for process 8378
[stress.process.out] #
[stress.process.out] # A fatal error has been detected by the Java Runtime Environment:
[stress.process.out] #
[stress.process.out] # SIGSEGV (0xb) at pc=0x00007f32f0b16f41, pid=1674, tid=1732
[stress.process.out] #
[stress.process.out] # JRE version: Java(TM) SE Runtime Environment (15.0+13) (fastdebug build 15-ea+13-491)
[stress.process.out] # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 15-ea+13-491, mixed mode, tiered, z gc, linux-amd64)
[stress.process.out] # Problematic frame:
[stress.process.out] # V [libjvm.so+0x88cf41] CompiledMethod::cleanup_inline_caches_impl(bool, bool)+0x251
[stress.process.out] #
[stress.process.out] # Core dump will be written. Default location: Core dumps may be processed with "/opt/core.sh %p" (or dumping to /opt/mach5/mesos/work_dir/slaves/90726e33-be99-4e27-9d68-25dad266ef13-S6007/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/d1379c40-2c0e-486d-b4f2-fe10394be9ad/runs/fbd3b82b-9dae-479b-8671-e5323c6febb9/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink24HStress_java/scratch/0/core.1674)
[stress.process.out] #
[stress.process.out] Unsupported internal testing APIs have been used.
[stress.process.out]
[stress.process.out] # An error report file with more information is saved as:
[stress.process.out] # /opt/mach5/mesos/work_dir/slaves/90726e33-be99-4e27-9d68-25dad266ef13-S6007/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/d1379c40-2c0e-486d-b4f2-fe10394be9ad/runs/fbd3b82b-9dae-479b-8671-e5323c6febb9/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_kitchensink_Kitchensink24HStress_java/scratch/0/hs_err_pid1674.log
[stress.process.out] #
[stress.process.out] # If you would like to submit a bug report, please visit:
[stress.process.out] # https://bugreport.java.com/bugreport/crash.jsp
[stress.process.out] #
[2020-03-06T21:10:16.640859Z] Gathering output for process 8884
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x00007f32e8399850): JavaThread "Sweeper thread" daemon [_thread_in_vm, id=1732, stack(0x00007f32d0166000,0x00007f32d0267000)]
Stack: [0x00007f32d0166000,0x00007f32d0267000], sp=0x00007f32d0265990, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x88cf41] CompiledMethod::cleanup_inline_caches_impl(bool, bool)+0x251
V [libjvm.so+0x88da6a] CompiledMethod::cleanup_inline_caches(bool)+0x5a
V [libjvm.so+0x14a3acb] NMethodSweeper::process_compiled_method(CompiledMethod*)+0x23b
V [libjvm.so+0x14a4ed8] NMethodSweeper::sweep_code_cache()+0x418
V [libjvm.so+0x14a5a3d] NMethodSweeper::possibly_sweep()+0x10d
V [libjvm.so+0x14a60ae] NMethodSweeper::sweeper_loop()+0x2fe
V [libjvm.so+0x152ed36] JavaThread::thread_main_inner()+0x226
V [libjvm.so+0x1533db6] Thread::call_run()+0xf6
V [libjvm.so+0x1265506] thread_native_entry(Thread*)+0x116
siginfo: si_signo: 11 (SIGSEGV), si_code: 128 (SI_KERNEL), si_addr: 0x0000000000000000