8240693: Sweeper should not examine dying metadata in is_unloading() nmethod during static call stub cleaning

Reviewed-by: kvn, coleenp, pliden